--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -22,11 +22,10 @@ jobs:
         run: npm install
 
       - name: Build Angular App
-        run: ng build --output-path docs --base-href /landing_page/
+        run: npx ng build --output-path docs --base-href /landing_page/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
-
