--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -18,16 +18,19 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Install Dependencies
         run: npm install
 
       - name: Build Angular App
-        run: npx ng build --output-path docs --base-href /landing_page/
+        run: npx ng build --output-path dist/hugo-frontend --base-href /landing_page/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./dist/hugo-frontend
+          publish_branch: gh-pages
           enable_jekyll: false
-
