--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -25,7 +25,10 @@ jobs:
         run: npm install
 
       - name: Build Angular App
-        run: npx ng build --output-path dist/hugo-frontend --base-href /landing_page/
+        run: npx ng build --configuration production --output-path dist/hugo-frontend --base-href /landing_page/
+
+      - name: Check build output
+        run: ls -la dist/hugo-frontend
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
