--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -46,6 +46,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/hugo-frontend
+          publish_dir: ./dist/hugo-frontend/browser
           publish_branch: gh-pages
           enable_jekyll: false
