--- a/.github/workflows/angular-deploy.yml
+++ b/.github/workflows/angular-deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build Angular App
         run: npx ng build --configuration production --base-href /landing_page/
 
-      - name: Debug Build Output
-        run: ls -la dist/
+      - name: Check build output
+        run: ls -la ./dist/hugo-frontend
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
@@ -37,4 +37,6 @@ jobs:
           publish_dir: ./dist/hugo-frontend
           publish_branch: gh-pages
           enable_jekyll: false
+          allow_empty_commit: false
+
 
