deploy gh-pages2

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hugo-frontend",
+  "homepage": "https://huwolf12.github.io/landing_page",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist/landing_page"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +32,7 @@
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "gh-pages": "^0.0.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
