--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "dist/landing_page/"
           },
           "configurations": {
             "production": {
